--- a/views/admin_home.hbs
+++ b/views/admin_home.hbs
@@ -110,12 +110,10 @@
 
 	</div>
 </div>  		</div>
-  		<div class="col-md-10 content">
-  			  <div class="panel panel-default">
-	<div class="panel-heading">
-		<h3>User Details</h3> 
-	</div>
-	<div class="panel-body" style="background-color:#EAEBEF">
+  		<div class="col-md-10 ">
+  			  
+	
+	
 
 
 
@@ -129,41 +127,91 @@
 
 
 
-<section>
-  <!--for demo wrap-->
- 
-  <div class="tbl-header"> 
-    <table cellpadding="0" cellspacing="0" border="0">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Name</th>
-          <th>Email</th>
-          <th></th>
-        
-        </tr>
-      </thead>
-    </table>
-  </div>
-  <div class="tbl-content">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-		  {{#each items }}
-        <tr>
-          <td>{{ this._id}}</td>
-          <td>{{ this.username}} </td>
+
+
+
+
+
+
+
+
+
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
+
+<div class="container">
+    <div class="row">
+    
+    
+    
+        <div class="col-md-10 ">
+
+            <div class="panel panel-default panel-table">
+              <div class="panel-heading">
+                <div class="row">
+                  <div class="col col-xs-6">
+                    <h3 class="panel-title">Users Details</h3>
+                  </div>
+                  <div class="col col-xs-6 text-right">
+                    
+                  </div>
+                </div>
+              </div>
+              <div class="panel-body">
+                <table class="table table-striped table-bordered table-list">
+                  <thead>
+                    <tr>
+                        
+                        <th class="hidden-xs">Name</th>
+                    
+                        <th>Email</th>
+						<th><em class="fa fa-cog"></em></th>
+                    </tr> 
+                  </thead>
+                  <tbody>
+					   {{#each items }}
+                          <tr>
+                            
+                        
+                            <td>{{ this.username}} </td>
           <td>{{ this.email}}</td>
-          <td><a class="btn btn-danger" href="/admin/delete_vehicle_ad/{{this.ff_id}}" role="button">Delete</a></td>
-        
-        </tr>
-		{{/each}} 
-        
-        
-      </tbody>
-    </table>
-  </div>
-</section>
 
+							<td align="center">
+                    
+                              <a class="btn btn-danger" href="/admin/deleteUser/{{this._id}}" role="button"><em class="fa fa-trash"></em></a>
+                            </td>
+                          </tr>
+						  {{/each}} 
+                        </tbody>
+                </table>
+            
+              </div>
+              <div class="panel-footer">
+                <div class="row">
+                  <div class="col col-xs-4">Page 1 of 5
+                  </div>
+                  <div class="col col-xs-8">
+                    <ul class="pagination hidden-xs pull-right">
+                      <li><a href="#">1</a></li>
+                      <li><a href="#">2</a></li>
+                      <li><a href="#">3</a></li>
+                      <li><a href="#">4</a></li>
+                      <li><a href="#">5</a></li>
+                    </ul>
+                    <ul class="pagination visible-xs pull-right">
+                        <li><a href="#">«</a></li>
+                        <li><a href="#">»</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+</div></div></div>
 
 
 
@@ -179,8 +227,8 @@
 
 
     
-</div>
-  		</div>
+
+  	
   		<footer class="pull-left footer">
   			<p class="col-md-12">
   				<hr class="divider">
